2011-04-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	dvicore.c (struct a_bbox): Don't declare member tag as unsigned.
	(new_bbox): Don't declare param tag as unsigned.
	(do_pos_special): Casts from 'unsigned char *' to 'char *'.

2010-02-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.h: Revert the last changes from Feb 20 and 23.
	* dvipos.c: Don't #include <getopt.h> with kpathsea or MinGW32.

2010-02-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.h: Also need to #include <kpathsea/c-ctype.h>.

2010-02-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.h: Can't #include <kpathsea/kpathsea.h> for WIN32.
	We need <kpathsea/config.h>, <kpathsea/c-auto.h>,
	<kpathsea/tex-file.h>, and if not WIN32 <kpathsea/getopt.h>.

2009-08-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid maximal compiler warnings.
	* dvicore.c (clear_box): Use xstrdup'ed string literal to
	initialize non-const string (once).
	* utils.[ch] (msg_out): Constify string param.

2009-06-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CFLAGS): enable compiler warnings.
	* dvicore.c: initialize various local vars (although not
	needed) to avoid compiler warnings.
	(write_bbox): use long format spec for long vars.
	(dvi_unsigned_quad): unused.
	(sqxfw): always return at end of non-void function.
	(define_font): allocate empty string for null font name to
	avoid later problems (possibly a segmentation fault).
	* tfm.c:#include "tfm.h" for function prototypes.
	(tfm_open): parentheses around assignment used as truth value.
	(a_tfm_init): declare as static.
	(dump_sizes): declare as static, unused.

2009-06-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvicore.c, utils.h: rename INFINITY -> WEB_INFINITY, to avoid
	name conflict with INFINITY from cygwin <math.h>.

2009-05-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt to TL2009 build system.

2009-04-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
